Sync Community PR #1941 (Remove RKE- /getting-started section)

--- a/versions/v2.12/modules/en/pages/installation-and-upgrade/upgrades.adoc
+++ b/versions/v2.12/modules/en/pages/installation-and-upgrade/upgrades.adoc
@@ -1,12 +1,10 @@
 = Upgrades
-:revdate: 2025-08-05
+:revdate: 2025-08-25
 :page-revdate: {revdate}
 
 The following instructions will guide you through upgrading a Rancher server that was installed on a Kubernetes cluster with Helm. These steps also apply to air-gapped installs with Helm.
 
 For the instructions to upgrade Rancher installed with Docker, refer to xref:[this page.]
-
-To upgrade the components in your Kubernetes cluster, or the definition of the https://rancher.com/docs/rke/latest/en/config-options/services/[Kubernetes services] or https://rancher.com/docs/rke/latest/en/config-options/add-ons/[add-ons], refer to the https://rancher.com/docs/rke/latest/en/upgrades/[upgrade documentation for RKE], the Rancher Kubernetes Engine.
 
 == Prerequisites
 
@@ -14,7 +12,7 @@ To upgrade the components in your Kubernetes cluster, or the definition of the h
 
 Helm should be run from the same location as your kubeconfig file, or the same location where you run your kubectl commands from.
 
-If you installed Kubernetes with RKE, the config will have been created in the directory you ran `rke up` in.
+If you installed Kubernetes with RKE2/K3s, the Kubeconfig is stored in the `/etc/rancher/rke2/rke2.yaml` or `/etc/rancher/k3s/k3s.yaml` directory depending on your chosen distribution.
 
 The kubeconfig can also be manually targeted for the intended cluster with the `--kubeconfig` tag (see: https://helm.sh/docs/helm/helm/)
 
