--- a/versions/latest/modules/en/pages/installation-and-upgrade/install-rancher.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/install-rancher.adoc
@@ -1,5 +1,5 @@
 = Install/Upgrade {rancher-product-name} on a Kubernetes Cluster
-:revdate: 2025-03-17
+:revdate: 2025-08-25
 :page-revdate: {revdate}
 :description: Learn how to install Rancher in development and production environments. Read about single node and high availability installation
 
@@ -19,7 +19,6 @@ Rancher can be installed on any Kubernetes cluster. This cluster can use upstrea
 
 For help setting up a Kubernetes cluster, we provide these tutorials:
 
-* *RKE:* For the tutorial to install an RKE Kubernetes cluster, refer to xref:installation-and-upgrade/install-kubernetes/rke1-for-rancher.adoc[this page.] For help setting up the infrastructure for a high-availability RKE cluster, refer to xref:installation-and-upgrade/infrastructure-setup/ha-rke1-kubernetes-cluster.adoc[this page.]
 * *K3s:* For the tutorial to install a K3s Kubernetes cluster, refer to xref:installation-and-upgrade/install-kubernetes/k3s-for-rancher.adoc[this page.] For help setting up the infrastructure for a high-availability K3s cluster, refer to xref:installation-and-upgrade/infrastructure-setup/ha-k3s-kubernetes-cluster.adoc[this page.]
 * *RKE2:* For the tutorial to install an RKE2 Kubernetes cluster, refer to xref:installation-and-upgrade/install-kubernetes/rke2-for-rancher.adoc[this page.] For help setting up the infrastructure for a high-availability RKE2 cluster, refer to xref:installation-and-upgrade/infrastructure-setup/ha-rke2-kubernetes-cluster.adoc[this page.]
 * *Amazon EKS:* For details on how to install Rancher on Amazon EKS, including how to install an Ingress controller so that the Rancher server can be accessed, refer to xref:installation-and-upgrade/hosted-kubernetes/rancher-on-amazon-eks.adoc[this page.]
@@ -30,7 +29,7 @@ For help setting up a Kubernetes cluster, we provide these tutorials:
 
 The Rancher UI and API are exposed through an Ingress. This means the Kubernetes cluster that you install Rancher in must contain an Ingress controller.
 
-For RKE, RKE2, and K3s installations, you don't have to install the Ingress controller manually because one is installed by default.
+For RKE2 and K3s installations, you don't have to install the Ingress controller manually because one is installed by default.
 
 For distributions that do not include an Ingress Controller by default, like a hosted Kubernetes cluster such as EKS, GKE, or AKS, you have to deploy an Ingress controller first. Note that the Rancher Helm chart does not set an `ingressClassName` on the ingress by default. Because of this, you have to configure the Ingress controller to also watch ingresses without an `ingressClassName`.
 
