--- a/versions/latest/modules/en/pages/installation-and-upgrade/references/tls-settings.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/references/tls-settings.adoc
@@ -1,5 +1,5 @@
 = TLS Settings
-:revdate: 2024-09-23
+:revdate: 2025-08-25
 :page-revdate: {revdate}
 
 Changing the default TLS settings depends on the chosen installation method.
@@ -8,7 +8,7 @@ Changing the default TLS settings depends on the chosen installation method.
 
 When you install Rancher inside of a Kubernetes cluster, TLS is offloaded at the cluster's ingress controller. The possible TLS settings depend on the used ingress controller:
 
-* nginx-ingress-controller (default for RKE1 and RKE2): https://kubernetes.github.io/ingress-nginx/user-guide/tls/#default-tls-version-and-ciphers[Default TLS Version and Ciphers].
+* nginx-ingress-controller (default for RKE2): https://kubernetes.github.io/ingress-nginx/user-guide/tls/#default-tls-version-and-ciphers[Default TLS Version and Ciphers].
 * traefik (default for K3s): https://doc.traefik.io/traefik/https/tls/#tls-options[TLS Options].
 
 == Running Rancher in a single Docker container
