--- a/versions/latest/modules/zh/pages/installation-and-upgrade/references/tls-settings.adoc
+++ b/versions/latest/modules/zh/pages/installation-and-upgrade/references/tls-settings.adoc
@@ -1,5 +1,5 @@
 = TLS 设置
-:revdate: 2024-09-25
+:revdate: 2025-08-25
 :page-revdate: {revdate}
 
 更改默认 TLS 设置的方法取决于它的安装方式。
@@ -8,7 +8,7 @@
 
 当你在 Kubernetes 集群内安装 Rancher 时，TLS 会在集群的 Ingress Controller 上卸载。可用的 TLS 设置取决于使用的 Ingress Controller：
 
-* nginx-ingress-controller（RKE1 和 RKE2 默认）：link:https://kubernetes.github.io/ingress-nginx/user-guide/tls/#default-tls-version-and-ciphers[默认的 TLS 版本和密码]。
+* nginx-ingress-controller（RKE2 默认）：link:https://kubernetes.github.io/ingress-nginx/user-guide/tls/#default-tls-version-and-ciphers[默认的 TLS 版本和密码]。
 * traefik（K3s 默认）：link:https://doc.traefik.io/traefik/https/tls/#tls-options[TLS 选项]。
 
 == 在单个 Docker 容器中运行 Rancher
