--- a/versions/latest/modules/zh/pages/installation-and-upgrade/upgrades.adoc
+++ b/versions/latest/modules/zh/pages/installation-and-upgrade/upgrades.adoc
@@ -1,12 +1,10 @@
 = 升级
-:revdate: 2025-03-17
+:revdate: 2025-08-25
 :page-revdate: {revdate}
 
 本文介绍如何升级使用 Helm 安装在 Kubernetes 集群上的 Rancher Server。这些步骤也适用于使用 Helm 进行的离线安装。
 
 有关使用 Docker 安装的 Rancher 的升级说明，请参见xref:[本页。]
-
-如需升级 Kubernetes 集群中的组件，或 https://rancher.com/docs/rke/latest/en/config-options/services/[Kubernetes services] 或 https://rancher.com/docs/rke/latest/en/config-options/add-ons/[附加组件（add-on）]的定义，请参见 https://rancher.com/docs/rke/latest/en/upgrades/[RKE 升级文档]的 Rancher Kubernetes 引擎。
 
 == 先决条件
 
@@ -14,7 +12,7 @@
 
 Helm 的运行位置，应该与你的 kubeconfig 文件，或你运行 kubectl 命令的位置相同。
 
-如果你在安装 Kubernetes 时使用了 RKE，那么 config 将会在你运行 `rke up` 的目录下创建。
+If you installed Kubernetes with RKE2/K3s, the Kubeconfig is stored in the `/etc/rancher/rke2/rke2.yaml` or `/etc/rancher/k3s/k3s.yaml` directory depending on your chosen distribution.
 
 kubeconfig 也可以通过 `--kubeconfig` 标签（详情请参见 https://helm.sh/docs/helm/helm/ ）来手动指定所需的集群。
 
