Move to registration code prereq to online only

--- a/versions/latest/modules/en/pages/rancher-admin/scc-registration.adoc
+++ b/versions/latest/modules/en/pages/rancher-admin/scc-registration.adoc
@@ -10,11 +10,6 @@ Since Rancher v2.12.1, you should now register your SUSE Rancher Manager Prime S
 
 * You must have access to your organization. Ask your organization's administrator to add you to the account. See the https://scc.suse.com/docs/userguide#UG-Requesting-Access-to-an-Organizations-Account[SCC documentation] for details. If you know your organization's registration code, enter it when prompted.
 
-* You must have the registration code for your Rancher Manager subscription on SCC. To get the registration code:
-. Log in to SCC.
-. Navigate to **My Organizations** and click on the organization with your Rancher Manager subscription.
-. Find your Registration code under *Organization* > *Subscriptions* > *Subscription Information*.
-
 == Register with SUSE Customer Center
 
 From the Rancher UI, check the Notification Center (bell icon) in the upper-right corner for a "Rancher Prime Registration" notification and click *Register Now*. This redirects you to the *Registration* page under *Global Settings*. You can also directly go to *Global Settings* > *Registration*.
@@ -24,6 +19,11 @@ You have the option to register your Rancher Manager instance with SCC <<Online 
 === Online Registration
 
 You can register online through the Rancher UI or with Helm.
+
+Before proceeding, you must have the registration code for your Rancher Manager subscription on SCC. To get the registration code:
+. Log in to SCC.
+. Navigate to **My Organizations** and click on the organization with your Rancher Manager subscription.
+. Find your Registration code under *Organization* > *Subscriptions* > *Subscription Information*.
 
 ==== Rancher UI
 
