Fix instructions to get to registration page

--- a/versions/latest/modules/en/pages/rancher-admin/scc-registration.adoc
+++ b/versions/latest/modules/en/pages/rancher-admin/scc-registration.adoc
@@ -12,7 +12,7 @@ Since Rancher v2.12.1, you should now register your SUSE Rancher Manager Prime S
 
 == Register with SUSE Customer Center
 
-From the Rancher UI, check the Notification Center (bell icon) in the upper-right corner for a "Rancher Prime Registration" notification and click *Register Now*. This redirects you to the *Registration* page under *Global Settings*. You can also directly go to *Global Settings* > *Registration*.
+From the Rancher UI, go to *Global Settings* > *Registration*. You can also check the Notification Center (bell icon) in the upper-right corner for a "Rancher Prime Registration" notification and click *Register Now*. This redirects you to the *Registration* page under *Global Settings*.
 
 You have the option to register your Rancher Manager instance with SCC <<Online Registration,online>> or <<Offline Registration,offline>>.
 
