--- a/versions/latest/modules/en/pages/rancher-admin/scc-registration.adoc
+++ b/versions/latest/modules/en/pages/rancher-admin/scc-registration.adoc
@@ -6,7 +6,7 @@ Since Rancher v2.12.1, you should now register your SUSE Rancher Manager Prime S
 
 == Prequsities
 
-* Registering your Rancher Manager instance with SCC requires a SUSE account. If you don't have a SUSE account yet, [create one](https://www.suse.com/account/create/).
+* Registering your Rancher Manager instance with SCC requires a SUSE account. If you don't have a SUSE account yet, https://www.suse.com/account/create/[create one].
 
 * You must have access to your organization. Ask your organization's administrator to add you to the account. See the https://scc.suse.com/docs/userguide#UG-Requesting-Access-to-an-Organizations-Account[SCC documentation] for details. If you know your organization's registration code, enter it when prompted.
 
