Replace system with instance

--- a/versions/latest/modules/en/pages/rancher-admin/scc-registration.adoc
+++ b/versions/latest/modules/en/pages/rancher-admin/scc-registration.adoc
@@ -31,7 +31,7 @@ Before proceeding, you must have the registration code for your Rancher Manager 
 
 ==== Helm
 
-After you have your registration code, you can register your Rancher Prime system through Helm by passing the argument `--set registration.enabled=true --set registration.regCode=<REGISTRATION-CODE-FROM_SCC>` in the Helm install command `helm install rancher rancher-prime/rancher`.
+After you have your registration code, you can register your Rancher Manager instance through Helm by passing the argument `--set registration.enabled=true --set registration.regCode=<REGISTRATION-CODE-FROM_SCC>` in the Helm install command `helm install rancher rancher-prime/rancher`.
 
 You can also update `values.yaml`,  enabling registration and adding your registration code.
 
@@ -81,7 +81,7 @@ kubectl get secrets -n  cattle-scc-system \
 .. Upload the registration request file.
 .. Select your *Organization* and *Subscription*.
 .. Click *Download Offline Certificate* and save the registration certificate file.
-. Upload the registration certificate file to your Rancher system using `kubectl` or Helm.
+. Upload the registration certificate file to your Rancher Manager instance using `kubectl` or Helm.
 
 * *`kubectl`:*
 +
