--- a/versions/v2.12/modules/en/pages/cluster-admin/manage-clusters/clean-cluster-nodes.adoc
+++ b/versions/v2.12/modules/en/pages/cluster-admin/manage-clusters/clean-cluster-nodes.adoc
@@ -146,6 +146,7 @@ Add the `-dry-run` flag to preview the script's outcome without making changes.
 --
 ====== 
 
+[#_cleaning_up_nodes]
 ## Cleaning up Nodes 
 
 [tabs,sync-group-id=k8s-distro]
