--- a/versions/v2.12/modules/en/pages/integrations/fleet/use-fleet-behind-a-proxy.adoc
+++ b/versions/v2.12/modules/en/pages/integrations/fleet/use-fleet-behind-a-proxy.adoc
@@ -1,5 +1,5 @@
 = Using {fleet-product-name} Behind a Proxy
-:revdate: 2025-08-05
+:revdate: 2025-08-25
 :page-revdate: {revdate}
 
 In this section, you'll learn how to enable Fleet in a setup that has a Rancher server with a public IP a Kubernetes cluster that has no public IP, but is configured to use a proxy.
@@ -17,6 +17,13 @@ For private nodes or private clusters, the environment variables need to be set 
 == Required Environment Variables
 
 When adding Fleet agent environment variables for the proxy, replace `<PROXY_IP>` with your private proxy IP.
+
+[CAUTION]
+====
+The `NO_PROXY` environment variable is not standardized, and the accepted format of the value can differ between applications. When configuring the `NO_PROXY` variable for Rancher, the value must adhere to the format expected by Golang. 
+
+Specifically, the value should be a comma-delimited string which only contains IP addresses, CIDR notation, domain names, or special DNS labels (e.g. `*`). For a full description of the expected value format, refer to the https://pkg.go.dev/golang.org/x/net/http/httpproxy#Config[**upstream Golang documentation**].
+====
 
 |===
 | Variable Name | Value
