--- a/versions/v2.12/modules/en/pages/api/workflows/kubeconfigs.adoc
+++ b/versions/v2.12/modules/en/pages/api/workflows/kubeconfigs.adoc
@@ -29,7 +29,7 @@ kubectl patch feature ext-kubeconfigs -p '{"spec":{"value":false}}'
 
 == Creating a Kubeconfig
 
-Only a **valid and active** Rancher user can create a Kubeconfig. For example, trying to create a Kubeconfig using a `system:admin` service account will lead to an error:
+Only a **valid and active** Rancher user can create a Kubeconfig. For example, trying to create a Kubeconfig using a `system:admin` service account leads to an error:
 
 [,bash]
 ----
@@ -41,7 +41,6 @@ Error from server (Forbidden): error when creating "STDIN": kubeconfigs.ext.catt
 ----
 
 [WARNING]
-.Important
 ====
 The kubeconfig content is generated and returned in the `.status.value` field **only once** when the Kubeconfig is successfully created because it contains secret values for created tokens. Therefore it has to be captured by using an appropriate output option, such as `-o jsonpath='{.status.value}'`, or `-o yaml`.
 ====
@@ -57,9 +56,9 @@ c-m-p66cdvlj downstream1
 
 The `metadata.name` and `metadata.generateName` fields are ignored, and the name of the new Kubeconfig is automatically generated using the prefix `kubeconfig-`.
 
-You can use the `spec.currentContext` field to set the cluster name, and it is used to set the current context in the kubeconfig. If you do not set the `spec.currentContext` field, then the first cluster in the `spec.clusters` list will be used as the current context. For ACE-enabled clusters that don't have an FQDN set, the first control plane node will be used as the current context.
+You can use the `spec.currentContext` field to set the cluster name, and it is used to set the current context in the kubeconfig. If you do not set the `spec.currentContext` field, then the first cluster in the `spec.clusters` list is used as the current context. For ACE-enabled clusters that don't have an FQDN set, the first control plane node is used as the current context.
 
-For ACE-enabled clusters, if the FQDN is set, then that will be used as a cluster entry in the kubeconfig; otherwise, entries for all control plane nodes will be created.
+For ACE-enabled clusters, if the FQDN is set, then that is used as a cluster entry in the kubeconfig; otherwise, entries for all control plane nodes are created.
 
 [,bash]
 ----
@@ -73,7 +72,7 @@ spec:
 EOF
 ----
 
-If `"*"` is specified as the first item in the `spec.clusters` field, the kubeconfig will be created for all clusters that the user has access to, if any.
+If `"*"` is specified as the first item in the `spec.clusters` field, the kubeconfig is created for all clusters that the user has access to, if any.
 
 [,bash]
 ----
@@ -86,7 +85,7 @@ spec:
 EOF
 ----
 
-If `spec.ttl` is not specified, the Kubeconfig's tokens will be created with the expiration time defined in the `kubeconfig-default-token-ttl-minutes` setting, which is 30 days by default. If `spec.ttl` is specified, it should be greater than 0 and less than or equal to the value of the `kubeconfig-default-token-ttl-minutes` setting expressed in seconds.
+If `spec.ttl` is not specified, the Kubeconfig's tokens is created with the expiration time defined in the `kubeconfig-default-token-ttl-minutes` setting, which is 30 days by default. If `spec.ttl` is specified, it should be greater than 0 and less than or equal to the value of the `kubeconfig-default-token-ttl-minutes` setting expressed in seconds.
 
 [,bash]
 ----
