Update offline helm instructions

--- a/versions/latest/modules/en/pages/rancher-admin/scc-registration.adoc
+++ b/versions/latest/modules/en/pages/rancher-admin/scc-registration.adoc
@@ -67,6 +67,14 @@ registration:
   mode: offline
 ----
 
+. Run the Helm install command `helm install rancher rancher-prime/rancher` and verify installation is successful. 
+. Before proceeding, use the following Bash command to check that the SCC-Operator has successfully created a secret in the `cattle-scc-system` namespace. After the secret is created, it outputs  `Secret created!`.
++
+[,bash]
+----
+for i in {1..100}; do kubectl wait --for=create secret/scc-registration -n cattle-scc-system --timeout=3s &> /dev/null && echo "Secret created!" && break || { echo "Not ready yet..."; sleep 3; }; done
+----
+
 . Using `kubectl`, retrieve the registration request file and save it locally.
 +
 [,bash]
