--- a/versions/latest/modules/en/pages/cluster-deployment/infra-providers/digitalocean/digitalocean.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/infra-providers/digitalocean/digitalocean.adoc
@@ -1,67 +1,14 @@
 = Creating a DigitalOcean Cluster
-:revdate: 2024-09-27
+:revdate: 2025-08-25
 :page-revdate: {revdate}
 
-In this section, you'll learn how to use Rancher to install an https://rancher.com/docs/rke/latest/en/[RKE] Kubernetes cluster in DigitalOcean.
+In this section, you'll learn how to deploy an https://documentation.suse.com/cloudnative/rke2/[RKE2]/https://documentation.suse.com/cloudnative/k3s/[K3s] Kubernetes cluster in DigitalOcean.
 
-First, you will set up your DigitalOcean cloud credentials in Rancher. Then you will use your cloud credentials to create a node template, which Rancher will use to provision new nodes in DigitalOcean.
+First, you set up your DigitalOcean cloud credentials in Rancher.
 
-Then you will create a DigitalOcean cluster in Rancher, and when configuring the new cluster, you will define node pools for it. Each node pool will have a Kubernetes role of etcd, controlplane, or worker. Rancher will install RKE Kubernetes on the new nodes, and it will set up each node with the Kubernetes role defined by the node pool.
+Then you create a DigitalOcean cluster in Rancher, and when configuring the new cluster, you define machine pools for it. Each machine pool has a Kubernetes role of etcd, controlplane, or worker. Rancher installs Kubernetes on the new nodes, and it sets up each node with the Kubernetes role defined by the machine pool.
 
-[tabs]
-======
-RKE::
-+
---
-. <<_rke_1_create_your_cloud_credentials,Create your cloud credentials>>
-. <<_rke_2_create_a_node_template_with_your_cloud_credentials,Create a node template with your cloud credentials>>
-. <<_rke_3_create_a_cluster_with_node_pools_using_the_node_template,Create a cluster with node pools using the node template>>
-
-[#_rke_1_create_your_cloud_credentials]
-[pass]
-<h3><a class="anchor" id="_rke_1_create_your_cloud_credentials" href="#_rke_1_create_your_cloud_credentials"></a>1. Create your cloud credentials</h3>
-
-. Click *☰ > Cluster Management*.
-. Click *Cloud Credentials*.
-. Click *Create*.
-. Click *DigitalOcean*.
-. Enter your Digital Ocean credentials.
-. Click *Create*.
-
-*Result:* You have created the cloud credentials that will be used to provision nodes in your cluster. You can reuse these credentials for other node templates, or in other clusters.
-
-[#_rke_2_create_a_node_template_with_your_cloud_credentials]
-[pass]
-<h3><a class="anchor" id="_rke_2_create_a_node_template_with_your_cloud_credentials" href="#_rke_2_create_a_node_template_with_your_cloud_credentials"></a>2. Create a node template with your cloud credentials</h3>
-
-Creating a xref:cluster-deployment/infra-providers/infra-providers#_node_templates[node template] for DigitalOcean will allow Rancher to provision new nodes in DigitalOcean. Node templates can be reused for other clusters.
-
-. Click *☰ > Cluster Management*.
-. Click menu:RKE1 Configuration[Node Templates].
-. Click *Add Template*.
-. Click *DigitalOcean*.
-. Fill out a node template for DigitalOcean. For help filling out the form, refer to xref:cluster-deployment/infra-providers/digitalocean/node-template-configuration.adoc[DigitalOcean Node Template Configuration.]
-
-[#_rke_3_create_a_cluster_with_node_pools_using_the_node_template]
-[pass]
-<h3><a class="anchor" id="_rke_3_create_a_cluster_with_node_pools_using_the_node_template" href="#_rke_3_create_a_cluster_with_node_pools_using_the_node_template"></a>3. Create a cluster with node pools using the node template</h3>
-
-. Click *☰ > Cluster Management*.
-. On the *Clusters* page, click *Create*.
-. Click *DigitalOcean*.
-. Enter a *Cluster Name*.
-. Add one or more node pools to your cluster. Add one or more node pools to your cluster. Each node pool uses a node template to provision new nodes. For more information about node pools, including best practices for assigning Kubernetes roles to them, see xref:cluster-deployment/infra-providers/infra-providers.adoc[this section.]
-. *In the Cluster Configuration* section, choose the version of Kubernetes that will be installed, what network provider will be used and if you want to enable project network isolation. To see more cluster options, click on *Show advanced options*. For help configuring the cluster, refer to the xref:cluster-deployment/configuration/rke1.adoc[RKE cluster configuration reference.]
-. Use *Member Roles* to configure user authorization for the cluster. Click *Add Member* to add users that can access the cluster. Use the *Role* drop-down to set permissions for each user.
-. Click *Create*.
---
-
-RKE2::
-+
---
-[#_rke2_1_create_your_cloud_credentials]
-[pass]
-<h3><a class="anchor" id="_rke2_1_create_your_cloud_credentials" href="#_rke2_1_create_your_cloud_credentials"></a>1. Create your cloud credentials</h3>
+== Create your cloud credentials
 
 If you already have a set of cloud credentials to use, skip this section.
 
@@ -72,9 +19,7 @@ If you already have a set of cloud credentials to use, skip this section.
 . Enter your Digital Ocean credentials.
 . Click *Create*.
 
-[#_2_create_your_cluster]
-[pass]
-<h3><a class="anchor" id="_2_create_your_cluster" href="#_2_create_your_cluster"></a>2. Create your cluster</h3>
+== Create your cluster
 
 Use Rancher to create a Kubernetes cluster in DigitalOcean.
 
@@ -86,11 +31,9 @@ Use Rancher to create a Kubernetes cluster in DigitalOcean.
 . Enter a *Cluster Name*.
 . Create a machine pool for each Kubernetes role. Refer to the xref:cluster-deployment/infra-providers/infra-providers#_node_roles[best practices] for recommendations on role assignments and counts.
  .. For each machine pool, define the machine configuration. Refer to the xref:cluster-deployment/infra-providers/digitalocean/machine-configuration.adoc[DigitalOcean machine configuration reference] for information on configuration options.
-. Use the *Cluster Configuration* to choose the version of Kubernetes that will be installed, what network provider will be used and if you want to enable project network isolation. For help configuring the cluster, refer to the xref:cluster-deployment/configuration/rke2.adoc[RKE2 cluster configuration reference.]
+. Use the *Cluster Configuration* to choose the version of Kubernetes to install, what network provider to use and if you want to enable project network isolation. For help configuring the cluster, refer to the xref:cluster-deployment/configuration/rke2.adoc[RKE2] and xref:cluster-deployment/configuration/k3s.adoc[K3s] cluster configuration references.
 . Use *Member Roles* to configure user authorization for the cluster. Click *Add Member* to add users that can access the cluster. Use the *Role* drop-down to set permissions for each user.
 . Click *Create*.
---
-======
 
 *Result:*
 
