--- a/versions/latest/modules/en/pages/cluster-deployment/infra-providers/nutanix/nutanix.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/infra-providers/nutanix/nutanix.adoc
@@ -1,5 +1,5 @@
 = Creating a Nutanix AOS Cluster
-:revdate: 2025-03-17
+:revdate: 2025-08-25
 :page-revdate: {revdate}
 :description: Use Rancher to create a Nutanix AOS (AHV) cluster. It may consist of groups of VMs with distinct properties which allow for fine-grained control over the sizing of nodes.
 
@@ -14,4 +14,4 @@ A Nutanix cluster may consist of multiple groups of VMs with distinct properties
 
 == Creating a Nutanix Cluster
 
-In xref:cluster-deployment/infra-providers/nutanix/provision-kubernetes-clusters-in-aos.adoc[this section,] you'll learn how to use Rancher to install an https://rancher.com/docs/rke/latest/en/[RKE] Kubernetes cluster in Nutanix AOS.
+In xref:cluster-deployment/infra-providers/nutanix/provision-kubernetes-clusters-in-aos.adoc[this section,] you'll learn how to use Rancher to install an https://documentation.suse.com/cloudnative/rke2/[RKE2] Kubernetes cluster in Nutanix AOS.
