--- a/versions/latest/modules/en/pages/cluster-deployment/infra-providers/vsphere/create-credentials.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/infra-providers/vsphere/create-credentials.adoc
@@ -1,5 +1,5 @@
 = Creating Credentials in the VMware vSphere Console
-:revdate: 2024-11-19
+:revdate: 2025-08-25
 :page-revdate: {revdate}
 
 This section describes how to create a VMware vSphere username and password. You must provide these vSphere credentials to Rancher, which allows Rancher to provision resources in vSphere.
@@ -56,7 +56,7 @@ The following steps create a role with the required privileges and then assign i
 image::rancherroles1.png[]
 
 . Go to the *Users and Groups* tab.
-. Create a new user. Fill out the form and then click *OK*. Make sure to note the username and password, because you will need it when configuring node templates in Rancher.
+. Create a new user. Fill out the form and then click *OK*. Make sure to note the username and password, because you need it when creating cloud credentials in Rancher.
 +
 image::rancheruser.png[]
 
