--- a/versions/v2.12/modules/en/pages/cluster-deployment/infra-providers/aws/aws.adoc
+++ b/versions/v2.12/modules/en/pages/cluster-deployment/infra-providers/aws/aws.adoc
@@ -1,13 +1,14 @@
 = Creating an Amazon EC2 Cluster
-:revdate: 2025-08-05
+:revdate: 2025-08-25
 :page-revdate: {revdate}
 :description: Learn the prerequisites and steps required in order for you to create an Amazon EC2 cluster using Rancher
 
-In this section, you'll learn how to use Rancher to install an https://rancher.com/docs/rke/latest/en/[RKE] Kubernetes cluster in Amazon EC2.
+In this section, you'll learn how to deploy an https://documentation.suse.com/cloudnative/rke2/[RKE2]/https://documentation.suse.com/cloudnative/k3s/[K3s]
+ Kubernetes cluster in Amazon EC2.
 
-First, you will set up your EC2 cloud credentials in Rancher. Then you will use your cloud credentials to create a node template, which Rancher will use to provision new nodes in EC2.
+First, you set up your EC2 cloud credentials in Rancher.
 
-Then you will create an EC2 cluster in Rancher, and when configuring the new cluster, you will define node pools for it. Each node pool will have a Kubernetes role of etcd, controlplane, or worker. Rancher will install RKE Kubernetes on the new nodes, and it will set up each node with the Kubernetes role defined by the node pool.
+Then you create an EC2 cluster in Rancher, and when configuring the new cluster, you define machine pools for it. Each machine pool has a Kubernetes role of etcd, controlplane, or worker. Rancher installs Kubernetes on the new nodes, and it sets up each node with the Kubernetes role defined by the machine pool.
 
 == Prerequisites
 
@@ -22,74 +23,7 @@ Then you will create an EC2 cluster in Rancher, and when configuring the new clu
 
 The steps to create a cluster differ based on your Rancher version.
 
-[tabs]
-======
-RKE::
-+
---
-. <<_rke_1_create_your_cloud_credentials,Create your cloud credentials>>
-. <<_2_create_a_node_template_with_your_cloud_credentials_and_information_from_ec2,Create a node template with your cloud credentials and information from EC2>>
-. <<_3_create_a_cluster_with_node_pools_using_the_node_template,Create a cluster with node pools using the node template>>
-
-[#_rke_1_create_your_cloud_credentials]
-[pass]
-<h3><a class="anchor" id="_rke_1_create_your_cloud_credentials" href="#_rke_1_create_your_cloud_credentials"></a>1. Create your cloud credentials</h3>
-
-. Click *☰ > Cluster Management*.
-. Click *Cloud Credentials*.
-. Click *Create*.
-. Click *Amazon*.
-. Enter a name for the cloud credential.
-. In the *Default Region* field, select the AWS region where your cluster nodes will be located.
-. Enter your AWS EC2 *Access Key* and *Secret Key*.
-. Click *Create*.
-
-*Result:* You have created the cloud credentials that will be used to provision nodes in your cluster. You can reuse these credentials for other node templates, or in other clusters.
-
-[#_2_create_a_node_template_with_your_cloud_credentials_and_information_from_ec2]
-[pass]
-<h3><a class="anchor" id="_2_create_a_node_template_with_your_cloud_credentials_and_information_from_ec2" href="#_2_create_a_node_template_with_your_cloud_credentials_and_information_from_ec2"></a>2. Create a node template with your cloud credentials and information from EC2</h3>
-
-Creating a xref:cluster-deployment/infra-providers/infra-providers.adoc#_node_templates[node template] for EC2 will allow Rancher to provision new nodes in EC2. Node templates can be reused for other clusters.
-
-. Click *☰ > Cluster Management*.
-. Click menu:RKE1 Configuration[Node Templates]
-. Click *Add Template*.
-. Fill out a node template for EC2. For help filling out the form, refer to xref:cluster-deployment/infra-providers/aws/node-template-configuration.adoc[EC2 Node Template Configuration.]
-. Click *Create*.
-+
-[NOTE]
-====
-If you want to use the https://kubernetes.io/docs/concepts/services-networking/dual-stack/[dual-stack] feature, there are additional https://rancher.com/docs/rke//latest/en/config-options/dual-stack#requirements[requirements] that must be taken into consideration.
-====
-
-[#_3_create_a_cluster_with_node_pools_using_the_node_template]
-[pass]
-<h3><a class="anchor" id="_3_create_a_cluster_with_node_pools_using_the_node_template" href="#_3_create_a_cluster_with_node_pools_using_the_node_template"></a>3. Create a cluster with node pools using the node template</h3>
-
-Add one or more node pools to your cluster. For more information about node pools, see xref:cluster-deployment/infra-providers/infra-providers.adoc[this section.]
-
-. Click *☰ > Cluster Management*.
-. On the *Clusters* page, click *Create*.
-. Click *Amazon EC2*.
-. Create a node pool for each Kubernetes role. For each node pool, choose a node template that you created. For more information about node pools, including best practices for assigning Kubernetes roles to them, see xref:cluster-deployment/infra-providers/infra-providers.adoc[this section.]
-. Click *Add Member* to add users that can access the cluster. Use the *Role* drop-down to set permissions for each user.
-. Use *Cluster Options* to choose the version of Kubernetes that will be installed, what network provider will be used and if you want to enable project network isolation. Refer to xref:cluster-deployment/set-up-cloud-providers/set-up-cloud-providers.adoc[Selecting Cloud Providers] to configure the Kubernetes Cloud Provider. For help configuring the cluster, refer to the xref:cluster-deployment/configuration/rke1.adoc[RKE cluster configuration reference.]
-+
-[NOTE]
-====
-If you want to use the https://kubernetes.io/docs/concepts/services-networking/dual-stack/[dual-stack] feature, there are additional https://rancher.com/docs/rke//latest/en/config-options/dual-stack#requirements[requirements] that must be taken into consideration.
-====
-
-. Click *Create*.
---
-
-RKE2::
-+
---
-[#_rke2_1_create_your_cloud_credentials]
-[pass]
-<h3><a class="anchor" id="_rke2_1_create_your_cloud_credentials" href="#_rke2_1_create_your_cloud_credentials"></a>1. Create your cloud credentials</h3>
+=== Create your cloud credentials
 
 If you already have a set of cloud credentials to use, skip this section.
 
@@ -102,11 +36,9 @@ If you already have a set of cloud credentials to use, skip this section.
 . Enter your AWS EC2 *Access Key* and *Secret Key*.
 . Click *Create*.
 
-*Result:* You have created the cloud credentials that will be used to provision nodes in your cluster. You can reuse these credentials for other node templates, or in other clusters.
+*Result:* You have created the cloud credentials that are used to provision nodes in your cluster.
 
-[#_rke2_create_your_cluster]
-[pass]
-<h3><a class="anchor" id="_create_your_cluster" href="#_create_your_cluster"></a>Create your cluster</h3>
+=== Create your cluster
 
 . Click *☰ > Cluster Management*.
 . On the *Clusters* page, click *Create*.
@@ -116,11 +48,9 @@ If you already have a set of cloud credentials to use, skip this section.
 . Enter a *Cluster Name*.
 . Create a machine pool for each Kubernetes role. Refer to the xref:cluster-deployment/infra-providers/infra-providers.adoc#_node_roles[best practices] for recommendations on role assignments and counts.
  .. For each machine pool, define the machine configuration. Refer to xref:cluster-deployment/infra-providers/aws/machine-configuration.adoc[the EC2 machine configuration reference] for information on configuration options.
-. Use the *Cluster Configuration* to choose the version of Kubernetes that will be installed, what network provider will be used and if you want to enable project network isolation. For help configuring the cluster, refer to the xref:cluster-deployment/configuration/rke2.adoc[RKE2 cluster configuration reference.]
+. Use the *Cluster Configuration* to choose the version of Kubernetes that to install, what network provider to use and if you want to enable project network isolation. For help configuring the cluster, refer to the xref:cluster-deployment/configuration/rke2.adoc[RKE2] and xref:cluster-deployment/configuration/k3s.adoc[K3s] cluster configuration references.
 . Use *Member Roles* to configure user authorization for the cluster. Click *Add Member* to add users that can access the cluster. Use the *Role* drop-down to set permissions for each user.
 . Click *Create*.
---
-======
 
 *Result:*
 
