--- a/versions/v2.12/modules/en/pages/cluster-deployment/infra-providers/vsphere/create-a-vm-template.adoc
+++ b/versions/v2.12/modules/en/pages/cluster-deployment/infra-providers/vsphere/create-a-vm-template.adoc
@@ -1,10 +1,10 @@
 = Creating a VMware vSphere Virtual Machine Template
-:revdate: 2025-08-05
+:revdate: 2025-08-25
 :page-revdate: {revdate}
 
-Creating virtual machines in a repeatable and reliable fashion can often be difficult. VMware vSphere offers the ability to build one VM that can then be converted to a template. The template can then be used to create identically configured VMs. Rancher leverages this capability within node pools to create identical RKE1 and RKE2 nodes.
+Creating virtual machines in a repeatable and reliable fashion can often be difficult. VMware vSphere offers the ability to build one VM that can then be converted to a template. The template can then be used to create identically configured VMs. Rancher leverages this capability to create identical RKE/K3s nodes.
 
-In order to leverage the template to create new VMs, Rancher has some <<_requirements,specific requirements>> that the VM must have pre-installed. After you configure the VM with these requirements, you will next need to <<_preparing_your_vm,prepare the VM>> before <<_creating_a_template,creating the template>>. Finally, once preparation is complete, the VM can be <<_converting_to_a_template,converted to a template>> and <<_moving_to_a_content_library,moved into a content library>>, ready for Rancher node pool usage.
+In order to leverage the template to create new VMs, Rancher has some <<_requirements,specific requirements>> that the VM must have pre-installed. After you configure the VM with these requirements, you need to <<_preparing_your_vm,prepare the VM>> before <<_creating_a_template,creating the template>>. Finally, once preparation is complete, the VM can be <<_converting_to_a_template,converted to a template>> and <<_moving_to_a_content_library,moved into a content library>>.
 
 == Requirements
 
@@ -43,16 +43,6 @@ The list of packages that need to be installed on the template is as follows:
 
 * Windows Container Feature
 * https://cloudbase.it/cloudbase-init/#download[cloudbase-init]
-* https://docs.microsoft.com/en-us/virtualization/windowscontainers/quick-start/set-up-environment?tabs=Windows-Server#install-docker[Docker EE] - RKE1 Only
-
-[NOTE]
-.About the configuration for Windows templates varies between RKE1 and RKE2:
-====
-
-* RKE1 leverages Docker, so any RKE1 templates need to have Docker EE pre-installed as well
-* RKE2 does not require Docker EE, and thus it does not need to be installed
-====
-
 
 == Creating a Template
 
