--- a/versions/v2.12/modules/en/pages/cluster-deployment/infra-providers/vsphere/provision-kubernetes-clusters-in-vsphere.adoc
+++ b/versions/v2.12/modules/en/pages/cluster-deployment/infra-providers/vsphere/provision-kubernetes-clusters-in-vsphere.adoc
@@ -1,17 +1,13 @@
 = Provisioning Kubernetes Clusters in VMware vSphere
-:revdate: 2025-08-05
+:revdate: 2025-08-25
 :page-revdate: {revdate}
 :experimental:
 
-In this section, you'll learn how to use Rancher to install an https://rancher.com/docs/rke/latest/en/[RKE]  Kubernetes cluster in VMware vSphere.
+In this section, you'll learn how to use Rancher to deploy an https://documentation.suse.com/cloudnative/rke2/[RKE2]/https://documentation.suse.com/cloudnative/k3s/[K3s] Kubernetes cluster in VMware vSphere.
 
-First, you will set up your vSphere cloud credentials in Rancher. Then you will use your cloud credentials to create a node template, which Rancher will use to provision nodes in vSphere.
+First, you set up your vSphere cloud credentials in Rancher.
 
-Then you will create a vSphere cluster in Rancher, and when configuring the new cluster, you will define node pools for it. Each node pool will have a Kubernetes role of etcd, controlplane, or worker. Rancher will install RKE Kubernetes on the new nodes, and it will set up each node with the Kubernetes role defined by the node pool.
-
-For details on configuring the vSphere node template, refer to the xref:cluster-deployment/infra-providers/vsphere/node-template-configuration.adoc[vSphere node template configuration reference.]
-
-For details on configuring RKE Kubernetes clusters in Rancher, refer to the xref:cluster-deployment/configuration/rke1.adoc#_rke_cluster_config_file_reference[cluster configuration reference.]
+Then you creates a vSphere cluster in Rancher, and when configuring the new cluster, you define machine pools for it. Each machine pool has a Kubernetes role of etcd, controlplane, or worker. Rancher installs Kubernetes on the new nodes, and it sets up each node with the Kubernetes role defined by the machine pool.
 
 * <<_preparation_in_vmware_vsphere,Preparation in vSphere>>
 * <<_creating_a_vmware_vsphere_cluster,Creating a vSphere Cluster>>
@@ -20,11 +16,9 @@ For details on configuring RKE Kubernetes clusters in Rancher, refer to the xref
 
 This section describes the requirements for setting up vSphere so that Rancher can provision VMs and clusters.
 
-The node templates are documented and tested with the vSphere Web Services API version 6.5.
-
 === Create Credentials in VMware vSphere
 
-Before proceeding to create a cluster, you must ensure that you have a vSphere user with sufficient permissions. When you set up a node template, the template will need to use these vSphere credentials.
+Before proceeding to create a cluster, you must ensure that you have a vSphere user with sufficient permissions.
 
 Refer to this xref:cluster-deployment/infra-providers/vsphere/create-credentials.adoc[how-to guide] for instructions on how to create a user in vSphere with the required permissions. These steps result in a username and password that you will need to provide to Rancher, which allows Rancher to provision resources in vSphere.
 
@@ -48,10 +42,6 @@ If you have a cluster with DRS enabled, setting up https://docs.vmware.com/en/VM
 
 == Creating a VMware vSphere Cluster
 
-. <<_1_create_your_cloud_credentials,Create your cloud credentials>>
-. <<_2_create_a_node_template_with_your_cloud_credentials,Create a node template with your cloud credentials>>
-. <<_3_create_a_cluster_with_node_pools_using_the_node_template,Create a cluster with node pools using the node template>>
-
 === 1. Create your cloud credentials
 
 . Click *☰ > Cluster Management*.
@@ -61,32 +51,21 @@ If you have a cluster with DRS enabled, setting up https://docs.vmware.com/en/VM
 . Enter your vSphere credentials. For help, refer to *Account Access* in the xref:cluster-deployment/infra-providers/vsphere/node-template-configuration.adoc[node template configuration reference.]
 . Click *Create*.
 
-*Result:* You have created the cloud credentials that will be used to provision nodes in your cluster. You can reuse these credentials for other node templates, or in other clusters.
+**Result:** You have created the cloud credentials that are used to provision nodes in your cluster.
 
-=== 2. Create a node template with your cloud credentials
-
-Creating a xref:cluster-deployment/infra-providers/infra-providers.adoc#_node_templates[node template] for vSphere will allow Rancher to provision new nodes in vSphere. Node templates can be reused for other clusters.
-
-. Click *☰ > Cluster Management*.
-. Click menu:RKE1 Configuration[Node Templates].
-. Click *Create*.
-. Click *Add Template*.
-. Click *vSphere*.
-. Fill out a node template for vSphere. For help filling out the form, refer to the vSphere node template xref:cluster-deployment/infra-providers/vsphere/node-template-configuration.adoc[configuration reference.].
-. Click *Create*.
-
-=== 3. Create a cluster with node pools using the node template
+=== 2. Create your cluster
 
 Use Rancher to create a Kubernetes cluster in vSphere.
 
 . In the upper left corner, click *☰ > Cluster Management*.
 . On the *Clusters* page, click *Create*.
 . Click *VMware vSphere*.
-. Enter a *Cluster Name* and use your vSphere cloud credentials. Click *Continue*.
+. Enter a *Cluster Name* and use your vSphere cloud credentials.
+. Create a machine pool for each Kubernetes role. Refer to the xref:cluster-deployment/infra-providers/infra-providers.adoc#_node_roles[best practices] for recommendations on role assignments and counts.
+.. For each machine pool, define the machine configuration.
+. Use the *Cluster Configuration* to choose the version of Kubernetes that to install, what network provider to use and if you want to enable project network isolation.  For help configuring the cluster, refer to the xref:cluster-deployment/configuration/rke2.adoc[RKE2] and xref:cluster-deployment/configuration/k3s.adoc[K3s] cluster configuration references.
 . Use *Member Roles* to configure user authorization for the cluster. Click *Add Member* to add users that can access the cluster. Use the *Role* drop-down to set permissions for each user.
-. Use *Cluster Options* to choose the version of Kubernetes that will be installed, what network provider will be used and if you want to enable project network isolation. To see more cluster options, click on *Show advanced options*. For help configuring the cluster, refer to the xref:cluster-deployment/configuration/rke1.adoc[RKE cluster configuration reference.]
 . If you want to dynamically provision persistent storage or other infrastructure later, you will need to enable the vSphere cloud provider by modifying the cluster YAML file. For details, refer to xref:cluster-deployment/set-up-cloud-providers/configure-in-tree-vsphere.adoc[in-tree vSphere cloud provider docs] and xref:cluster-deployment/set-up-cloud-providers/configure-out-of-tree-vsphere.adoc[out-of-tree vSphere cloud provider docs].
-. Add one or more node pools to your cluster. Each node pool uses a node template to provision new nodes. For more information about node pools, including best practices for assigning Kubernetes roles to the nodes, see xref:cluster-deployment/infra-providers/infra-providers.adoc#_node_pools[this section.]
 . Review your options to confirm they're correct. Then click *Create*.
 
 *Result:*
