--- a/versions/v2.12/modules/en/pages/rancher-admin/global-configuration/provisioning-drivers/provisioning-drivers.adoc
+++ b/versions/v2.12/modules/en/pages/rancher-admin/global-configuration/provisioning-drivers/provisioning-drivers.adoc
@@ -1,5 +1,5 @@
 = About Provisioning Drivers
-:revdate: 2025-08-05
+:revdate: 2025-08-26
 :page-revdate: {revdate}
 
 Drivers in Rancher allow you to manage which providers can be used to deploy xref:cluster-deployment/hosted-kubernetes/hosted-kubernetes.adoc[hosted Kubernetes clusters] or xref:cluster-deployment/infra-providers/infra-providers.adoc[nodes in an infrastructure provider] to allow Rancher to deploy and manage Kubernetes.
@@ -39,3 +39,4 @@ Rancher supports several major cloud providers, but by default, these node drive
 There are several other node drivers that are disabled by default, but are packaged in Rancher:
 
 * xref:integrations/harvester/overview.adoc#_harvester_node_driver/[{harvester-product-name}], available as of Rancher v2.6.1
+* xref:versions/latest/modules/en/pages/cluster-deployment/infra-providers/gce/gce.adoc[Google GCE], available as of Rancher v2.12.0
