--- a/versions/v2.12/modules/en/nav.adoc
+++ b/versions/v2.12/modules/en/nav.adoc
@@ -190,6 +190,8 @@
 *** xref:cluster-deployment/infra-providers/azure/azure.adoc[]
 **** xref:cluster-deployment/infra-providers/azure/machine-configuration.adoc[]
 **** xref:cluster-deployment/infra-providers/azure/node-template-configuration.adoc[]
+*** xref:cluster-deployment/infra-providers/gce/gce.adoc[]
+**** xref:cluster-deployment/infra-providers/gce/machine-configuration.adoc[]
 *** xref:cluster-deployment/infra-providers/nutanix/nutanix.adoc[]
 **** xref:cluster-deployment/infra-providers/nutanix/provision-kubernetes-clusters-in-aos.adoc[]
 **** xref:cluster-deployment/infra-providers/nutanix/node-template-configuration.adoc[]
