--- a/versions/latest/modules/en/pages/cluster-deployment/infra-providers/vsphere/provision-kubernetes-clusters-in-vsphere.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/infra-providers/vsphere/provision-kubernetes-clusters-in-vsphere.adoc
@@ -3,7 +3,7 @@
 :page-revdate: {revdate}
 :experimental:
 
-In this section, you'll learn how to use Rancher to deploy an https://documentation.suse.com/cloudnative/rke2/[RKE2]/https://documentation.suse.com/cloudnative/k3s/[K3s] Kubernetes cluster in VMware vSphere.
+In this section, you'll learn how to use Rancher to deploy an https://documentation.suse.com/cloudnative/rke2/[RKE2] or https://documentation.suse.com/cloudnative/k3s/[K3s] Kubernetes cluster in VMware vSphere.
 
 First, you set up your vSphere cloud credentials in Rancher.
 
