--- a/versions/latest/modules/en/pages/cluster-deployment/infra-providers/aws/aws.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/infra-providers/aws/aws.adoc
@@ -3,7 +3,7 @@
 :page-revdate: {revdate}
 :description: Learn the prerequisites and steps required in order for you to create an Amazon EC2 cluster using Rancher
 
-In this section, you'll learn how to deploy an https://documentation.suse.com/cloudnative/rke2/[RKE2]/https://documentation.suse.com/cloudnative/k3s/[K3s]
+In this section, you'll learn how to deploy an https://documentation.suse.com/cloudnative/rke2/[RKE2] or https://documentation.suse.com/cloudnative/k3s/[K3s]
  Kubernetes cluster in Amazon EC2.
 
 First, you set up your EC2 cloud credentials in Rancher.
