--- a/versions/latest/modules/en/pages/cluster-deployment/infra-providers/digitalocean/digitalocean.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/infra-providers/digitalocean/digitalocean.adoc
@@ -2,7 +2,7 @@
 :revdate: 2025-08-25
 :page-revdate: {revdate}
 
-In this section, you'll learn how to deploy an https://documentation.suse.com/cloudnative/rke2/[RKE2]/https://documentation.suse.com/cloudnative/k3s/[K3s] Kubernetes cluster in DigitalOcean.
+In this section, you'll learn how to deploy an https://documentation.suse.com/cloudnative/rke2/[RKE2] or https://documentation.suse.com/cloudnative/k3s/[K3s] Kubernetes cluster in DigitalOcean.
 
 First, you set up your DigitalOcean cloud credentials in Rancher.
 
