--- a/versions/latest/modules/en/pages/cluster-deployment/infra-providers/vsphere/vsphere.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/infra-providers/vsphere/vsphere.adoc
@@ -13,7 +13,7 @@ A vSphere cluster may consist of multiple groups of VMs with distinct properties
 
 == Creating a VMware vSphere Cluster
 
-In xref:cluster-deployment/infra-providers/vsphere/provision-kubernetes-clusters-in-vsphere.adoc[this section,] you'll learn how to use Rancher to install an https://documentation.suse.com/cloudnative/rke2/[RKE2]/https://documentation.suse.com/cloudnative/k3s/[K3s] Kubernetes cluster in vSphere.
+In xref:cluster-deployment/infra-providers/vsphere/provision-kubernetes-clusters-in-vsphere.adoc[this section,] you'll learn how to use Rancher to install an https://documentation.suse.com/cloudnative/rke2/[RKE2] or https://documentation.suse.com/cloudnative/k3s/[K3s] Kubernetes cluster in vSphere.
 
 == Provisioning Storage
 
