--- a/versions/latest/modules/en/nav.adoc
+++ b/versions/latest/modules/en/nav.adoc
@@ -49,6 +49,7 @@
 *** xref:installation-and-upgrade/infrastructure-setup/mysql-database-in-amazon-rds.adoc[]
 *** xref:installation-and-upgrade/infrastructure-setup/amazon-elb-load-balancer.adoc[]
 *** xref:installation-and-upgrade/infrastructure-setup/configure-layer-7-nginx-load-balancer.adoc[]
+*** xref:installation-and-upgrade/infrastructure-setup/configure-oidc-provider.adoc[]
 *** xref:installation-and-upgrade/infrastructure-setup/nginx-load-balancer.adoc[]
 ** xref:installation-and-upgrade/install-kubernetes/install-kubernetes.adoc[]
 *** xref:installation-and-upgrade/install-kubernetes/k3s-for-rancher.adoc[]
