Apply suggestions from code review
Co-authored-by: Billy Tat <btat@suse.com>

--- a/versions/v2.12/modules/en/pages/cluster-deployment/infra-providers/gce/gce.adoc
+++ b/versions/v2.12/modules/en/pages/cluster-deployment/infra-providers/gce/gce.adoc
@@ -2,7 +2,7 @@
 :revdate: 2025-08-26
 :page-revdate: {revdate}
 
-In this section, you'll learn how to use Rancher to provision an https://docs.rke2.io/[RKE2] Kubernetes cluster on the Google Cloud Platform (GCP) using Google Compute Engine (GCE) through Rancher.
+In this section, you'll learn how to use Rancher to provision an https://documentation.suse.com/cloudnative/rke2/[RKE2] Kubernetes cluster on the Google Cloud Platform (GCP) using Google Compute Engine (GCE) through Rancher.
 
 First, you will enable the GCE node driver in the Rancher UI. Then, you follow the steps to create a GCP service account with the necessary permissions, and generate a JSON key file. This key file will be used to create a cloud credential in Rancher. 
 
